--- a/index.html
+++ b/index.html
@@ -117,22 +117,22 @@
         <div class="carousel-item active">
           <img src="./img/1.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            <h3 class="fw-bolder">幽霛か、宇宙人か</h3>
+            <p>その選択が、世界の運命を狂わせる</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="./img/2.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h3 class="fw-bolder">オカルト少女とSFオタク、最狂の同盟結成。</h3>
+            <p>「信じる」が、武器になる。ダンダダンな毎日が今始まる！</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="./img/3.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+            <h3 class="fw-bolder">ノー理屈、ノー常識。</h3>
+            <p>全力で走り抜け！ 全ては“信じる”ために</p>
           </div>
         </div>
       </div>
@@ -156,38 +156,35 @@
           若需更改訂單內容，請於24小時內聯繫客服。
           請於下單後三日內完成匯款，逾期未付款者視同棄標，並可能列入黑名單。
           請保存付款憑證以備查詢。</p>
-        <button type="button" class="btn btn-outline-info">Info</button>
+        <button type="button" class="btn btn-outline-info">了解更多</button>
         <hr class="mx-5 my-5 mx-auto" style="width:100px">
       </div>
       <!-- =========三圈圈========= -->
       <section>
         <div class="col-12 col-lg text-center mb-5">
-          <div class="circle rounded-circle mx-auto mb-1"></div>
-          <h2 class="fs-2"> Heading</h2>
-          <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
-            column.</p>
-          <button type="button" class="btn btn-outline-info">See More</button>
+          <img src="./img/10.png" class="circle rounded-circle mx-auto mb-1">
+          <h2 class="fs-2">dandadang 精選專區</h2>
+          <p>把平凡甩開，切換到更帥、更鋒利的那一面。這裡的每樣選物，都像厄卡倫變身後一樣：能量滿點、自帶氣場。</p>
+          <button type="button" class="btn btn-outline-info">查看更多</button>
         </div>
         <div class="col-12 col-lg text-center mb-5">
-          <div class="circle rounded-circle mx-auto mb-1"></div>
-          <h2 class="fs-2"> Heading</h2>
-          <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.
-          </p>
-          <button type="button" class="btn btn-outline-info">See More</button>
+          <img src="./img/12.jpg" class="circle rounded-circle mx-auto mb-1">
+          <h2 class="fs-2">邪視降臨 下一秒就是你的命運</h2>
+          <p>直視即墜落的詛咒之眼，讓人魂魄戰慄的禁忌力量。</p>
         </div>
         <div class="col-12 col-lg text-center mb-5">
-          <div class="circle rounded-circle mx-auto mb-1"></div>
-          <h2 class="fs-2"> Heading</h2>
-          <p>SAnd lastly this, the third column of representative placeholder content.</p>
-          <button type="button" class="btn btn-outline-info">See More</button>
+          <img src="./img/11.png" class="circle rounded-circle mx-auto mb-1 ">
+          <h2 class="fs-2"> 白鳥愛羅的魅力，就是反差的力量</h2>
+          <p>安靜外表下藏著滿滿能量。選物靈感來自她的柔與剛，陪你一起在生活裡悄悄發光。</p>
+          <button type="button" class="btn btn-outline-info">查看更多</button>
         </div>
       </section>
       <section>
         <div class="col-12 col-lg text-center mb-5 my-5">
-          <button type="button" class="btn btn-warning p-2 mb-5" style="width: 150px">SHOP NOW</button>
+          <button type="button" class="btn btn-warning p-2 mb-5" style="width: 150px">立即選購</button>
           <h2 class="fs-2">產品資訊</h2>
           <p>我們專售高品質的動漫周邊商品，從角色模型、服飾到限量收藏品，皆嚴選正版授權，材質精緻、細節講究。每一款商品都以高規格製作，讓粉絲能真實感受到角色的魅力與熱血。無論是收藏或送禮，都能展現你的獨特品味與熱愛。</p>
-          <button type="button" class="btn btn-outline-info">Info</button>
+          <button type="button" class="btn btn-outline-info">了解更多</button>
           <hr class="mx-5 my-5 mx-auto" style="width:100px">
         </div>
       </section>
@@ -200,15 +197,15 @@
                 <div class="col">
                   <div class="row mb-3">
                     <div class="col">
-                      <img class="w-100" src="https://dummyimage.com/500X300/000/fff" alt="">
+                      <img class="w-100" style="object-fit: end; width: 100%; height: 160px;" src="./img/13.png" alt="">
                     </div>
                     <div class="col">
-                      <img class="w-100" src="https://dummyimage.com/500X300/000/fff" alt="">
+                      <img class="w-100" style="object-fit: end; width: 100%; height: 160px;" src="./img/14.png" alt="">
                     </div>
                   </div>
                   <div class="row">
                     <div class="col">
-                      <img class="w-100" src="https://dummyimage.com/500X300/000/fff" alt="">
+                      <img class="w-100" style="object-fit: end; width: 100%; height: 260px;" src="./img/17.png" alt="">
                     </div>
                   </div>
                 </div>
@@ -221,15 +218,18 @@
                     <div class="col">
                       <div class="row">
                         <div class="col">
-                          <img class="w-100" src="https://dummyimage.com/500X300/000/fff" alt="">
+                          <img class="w-100" style="object-fit: end; width: 100%; height: 260px;" src="./img/16.png"
+                            alt="">
                         </div>
                       </div>
                       <div class="row mt-3">
                         <div class="col ">
-                          <img class="w-100" src="https://dummyimage.com/500X300/000/fff" alt="">
+                          <img class="w-100" style="object-fit: end; width: 100%; height: 160px;" src="./img/15.png"
+                            alt="">
                         </div>
                         <div class="col">
-                          <img class="w-100" src="https://dummyimage.com/500X300/000/fff" alt="">
+                          <img class="w-100" style="object-fit: end; width: 100%; height: 160px;" src="./img/18.png"
+                            alt="">
                         </div>
                       </div>
                     </div>
@@ -243,7 +243,7 @@
         <div class="col-12 col-lg text-center mb-5 my-5">
           <h2 class="fs-2">郵寄資訊</h2>
           <p>所有商品皆由台灣出貨，確認付款後 1–3 個工作天內寄出。國內配送採用中華郵政或便利店取貨；海外訂單則提供國際包裹服務，運費依地區自動計算。每筆訂單出貨後將提供追蹤編號，讓您安心掌握配送進度。</p>
-          <button type="button" class="btn btn-outline-info">Info</button>
+          <button type="button" class="btn btn-outline-info">了解更多</button>
           <hr class="mx-5 my-5 mx-auto" style="width:100px">
         </div>
         <div class="bg-body-tertiary mx-auto" style="width: 90%;">
@@ -256,8 +256,8 @@
           </div>
           <div class="d-flex justify-content-between px-5 py-4 border-bottom">
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-              <label class="form-check-label" for="inlineRadio1">
+              <input class="form-check-input" type="radio" name="radioDefault" id="radioDefault2" checked>
+              <label class="form-check-label" for="radioDefault2">
             </div>
             <span>中華郵政</span>
             <span>宅配 / 超商取貨</span>
@@ -288,14 +288,15 @@
 
         </div>
         <div>
-          <button class="my-4 mx-5 p-2 d-flex justify-content-end rounded btn btn-warning" type="button">See More <i
-              class="fa-solid fa-arrow-right mt-1 mx-1"></i> </button>
+          <a href="" a class="link-offset-2 link-underline link-underline-opacity-0"><button
+              class="my-4 mx-5 p-2 d-flex justify-content-end rounded btn btn-warning" type="button">查看更多
+              <i class="fa-solid fa-arrow-right mt-1 mx-1"></i> </button></a>
         </div>
       </section>
       <!-- ===卡片=== -->
-      <section >
+      <section>
         <hr class="mb-4">
-        <div class="row mx-auto col-lg d-flex justify-content-between flex-wrap mx-5">
+        <div class="row mx-auto col-lg d-flex justify-content-evenly flex-wrap mx-5">
           <div class="bg-secondary-subtle d-flex px-0 m-3" style="width: 450px; height: 300px;">
             <img style="width: 200px; height: 300px;" src="./img/7.jpg" alt="">
             <span class="p-4 d-flex flex-column justify-content-between">
@@ -321,9 +322,103 @@
             </span>
           </div>
         </div>
-          <hr class="mb-4">
+        <hr class="mb-4">
       </section>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.0680982066992!2d139.77230584999998!3d35.6999418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ea7e2f93329%3A0x158f36257ff597b1!2z56eL6JGJ5Y6f!5e0!3m2!1szh-TW!2stw!4v1762694343290!5m2!1szh-TW!2stw"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
   </main>
+  <footer py-4 py-md-5 mt-5>
+    <div class="container-fluid  bg-secondary-subtle">
+      <div class="row pt-2">
+        <div class="my-logo col-12 col-lg-3 d-flex flex-column align-items-center justify-content-center">
+          <a class="navbar-brand pe-3" href="#">
+            <img src="./img/logo.jpg" alt="Bootstrap" class="img-style">
+            <span class="fw-bolder fst-italic">DANDADANG</span>
+          </a>
+          <div class="text-center mt-2">
+            <span>我們用心挑選每件商品，只為把最溫暖的幸福送到你手中。</span>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-2 mb-3 d-sm-flex flex-sm-column d-sm-flex flex-sm-column">
+          <h5 class="mt-4 text-center">品牌宇宙</h5>
+          <ul class="list-unstyled">
+            <li class="mb-2 text-center ">
+              <a class="link-offset-2 link-underline link-underline-opacity-0 link-hover-underline text-dark ms-2"
+                href="">品牌故事</a>
+            </li>
+            <li class="mb-2 text-center">
+              <a class="text-decoration-none text-dark text-center ms-2" href="">工藝</a>
+            </li>
+            <li class="mb-2 text-center">
+              <a class="text-decoration-none text-dark ms-2" href="">永續承諾</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-2 mb-3 d-sm-flex flex-sm-column">
+          <h5 class="mt-4 text-center">購物指南</h5>
+          <ul class="list-unstyled ">
+            <li class="mb-2 text-center">
+              <a class="text-decoration-none text-dark ms-2" href="">新品上市</a>
+            </li>
+            <li class="mb-2 text-center">
+              <a class="text-decoration-none text-dark ms-2" href="">禮物推薦</a>
+            </li>
+            <li class="mb-2 text-center">
+              <a class="text-decoration-none text-dark ms-2" href="">限定優惠</a>
+            </li>
+            <li class="mb-2 text-center">
+              <a class="text-decoration-none text-dark ms-2" href="">商業合作</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-2 mb-3 d-sm-flex flex-sm-column justify-content-lg-end">
+          <h5 class="mt-4 text-center">聯繫我們</h5>
+          <ul class="list-unstyled ">
+            <li class="mb-2 text-center">
+              <a class="text-decoration-none text-dark ms-2" href="">客服中心</a>
+            </li>
+            <li class="mb-2 text-center">
+              <a class="text-decoration-none text-dark ms-2" href="">門市資訊</a>
+            </li>
+            <li class="mb-2 text-center">
+              <a class="text-decoration-none text-dark ms-2" href="">Q&A</a>
+            </li>
+            <li class="mb-2 text-center">
+              <a class="text-decoration-none text-dark ms-2" href="">客戶回饋</a>
+            </li>
+          </ul>
+        </div>
+        <div
+          class="row col-sm-12 col-md-6 col-lg-3 mb-3 d-sm-flex flex-sm-column align-items-center align-items-center">
+          <button type="button" class="mx-auto btn btn-outline-info mt-4 mb-4" style="width: 200px; height: 50px;"> TW /
+            TWD$
+            （中文）</button>
+          <div class="flex text-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+              class="bi bi-instagram mr-5" viewBox="0 0 16 16">
+              <path
+                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+              class="bi bi-threads-fill" viewBox="0 0 16 16">
+              <path
+                d="M6.81 9.204c0-.41.197-1.062 1.727-1.062.469 0 .758.034 1.146.121-.124 1.606-.91 1.818-1.674 1.818-.418 0-1.2-.218-1.2-.877Z" />
+              <path
+                d="M2.59 16h10.82A2.59 2.59 0 0 0 16 13.41V2.59A2.59 2.59 0 0 0 13.41 0H2.59A2.59 2.59 0 0 0 0 2.59v10.82A2.59 2.59 0 0 0 2.59 16M5.866 5.91c.567-.81 1.315-1.126 2.35-1.126.73 0 1.351.246 1.795.711.443.466.696 1.132.754 1.983q.368.154.678.363c.832.559 1.29 1.395 1.29 2.353 0 2.037-1.67 3.806-4.692 3.806-2.595 0-5.291-1.51-5.291-6.004C2.75 3.526 5.361 2 8.033 2c1.234 0 4.129.182 5.217 3.777l-1.02.264c-.842-2.56-2.607-2.968-4.224-2.968-2.675 0-4.187 1.628-4.187 5.093 0 3.107 1.69 4.757 4.222 4.757 2.083 0 3.636-1.082 3.636-2.667 0-1.079-.906-1.595-.953-1.595-.177.925-.651 2.482-2.733 2.482-1.213 0-2.26-.838-2.26-1.936 0-1.568 1.488-2.136 2.663-2.136.44 0 .97.03 1.247.086 0-.478-.404-1.296-1.426-1.296-.911 0-1.16.288-1.45.624l-.024.027c-.202-.135-.875-.601-.875-.601Z" />
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="" fill="currentColor" class="bi bi-twitter-x"
+              viewBox="0 0 16 16">
+              <path
+                d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z" />
+            </svg>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
     </script>
