--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <!-- =====================================logo=================== -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class=" container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./index.html">
         <img src="./img/logo.jpg" alt="Bootstrap" class="img-style">
       </a>
       <!-- =================================nav================ -->
@@ -73,7 +73,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" href="#">首頁</a>
+            <a class="nav-link active" href="./index.html">首頁</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="#">新品上市</a>
@@ -86,16 +86,16 @@
           </li>
           <!-- ====================nav icon============= -->
           <li class="nav-item">
-            <a href="#" class="nav-link ">
+            <a href="./購物車1.html" class="nav-link ">
               <i class="bi bi-bag-fill"></i>
             </a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+            <a class="nav-link dropdown-toggle" href="./登入.html" role="button" data-bs-toggle="dropdown">
               <i class="bi bi-person"></i>
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">登入</a></li>
+              <li><a class="dropdown-item" href="./登入.html">登入</a></li>
             </ul>
           </li>
         </ul>
@@ -293,34 +293,34 @@
               <i class="fa-solid fa-arrow-right mt-1 mx-1"></i> </button></a>
         </div>
       </section>
-      <!-- ===卡片=== -->
+      <!-- ===3張卡片=== -->
       <section>
         <hr class="mb-4">
-        <div class="row mx-auto col-lg d-flex justify-content-evenly flex-wrap mx-5">
-          <div class="bg-secondary-subtle d-flex px-0 m-3" style="width: 450px; height: 300px;">
+        <div id="card-list" class="row mx-auto col-lg d-flex justify-content-evenly flex-wrap mx-5">
+          <!-- <div class="bg-secondary-subtle d-flex px-0 m-3" style="width: 450px; height: 300px;">
             <img style="width: 200px; height: 300px;" src="./img/7.jpg" alt="">
             <span class="p-4 d-flex flex-column justify-content-between">
               <div class="text-danger">限量版公仔</div>
               <div>這款「告訴婆婆」公仔以精緻細節呈現角色魅力，造型可愛又逗趣，無論收藏或擺飾都超療癒，是粉絲必收的限定周邊！</div>
               <h3>售價： $2,400</h3>
-            </span>
-          </div>
-          <div class="bg-secondary-subtle d-flex px-0 m-3" style="width: 450px; height: 300px;">
+            </span> -->
+        </div>
+        <!-- <div class="bg-secondary-subtle d-flex px-0 m-3" style="width: 450px; height: 300px;">
             <img style="width: 200px; height: 300px;" src="./img/8.jpg" alt="">
             <span class="p-4 d-flex flex-column justify-content-between">
               <div class="text-danger">限量版公仔</div>
               <div>「金蛋蛋」以亮面金屬質感打造，造型圓潤討喜、擺著就能招好運。小巧可愛、細節精緻，是桌上最療癒的幸運小公仔，收藏送禮都超適合！</div>
               <h3>售價： $1,980</h3>
             </span>
-          </div>
-          <div class="bg-secondary-subtle d-flex px-0 m-3" style="width: 450px; height: 300px;">
+          </div> -->
+        <!-- <div class="bg-secondary-subtle d-flex px-0 m-3" style="width: 450px; height: 300px;">
             <img style="width: 200px; height: 300px;" src="./img/9.jpg" alt="">
             <span class="p-4 d-flex flex-column justify-content-between">
               <div class="text-danger">限量版公仔</div>
               <div>我們的「全部角色」系列公仔以高品質呈現，每款都精細還原角色特色與表情。造型可愛、質感優秀，一次收藏全套更完整、更有成就感，是粉絲不可錯過的必收系列！</div>
               <h3>售價： $3,600</h3>
             </span>
-          </div>
+          </div> -->
         </div>
         <hr class="mb-4">
       </section>
@@ -341,7 +341,10 @@
             <span>我們用心挑選每件商品，只為把最溫暖的幸福送到你手中。</span>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-2 mb-3 d-sm-flex flex-sm-column d-sm-flex flex-sm-column">
+        <!-- -------footer ----- -->
+<div class="bg-info col-sm-12 col-md-6 col-lg-2 mb-3 d-sm-flex flex-sm-column d-sm-flex flex-sm-column">
+        <div id="footer-list"
+          class="bg-danger col-sm-12 col-md-6 col-lg-2 mb-3 d-sm-flex flex-sm-column d-sm-flex flex-sm-column">
           <h5 class="mt-4 text-center">品牌宇宙</h5>
           <ul class="list-unstyled">
             <li class="mb-2 text-center ">
@@ -356,7 +359,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-2 mb-3 d-sm-flex flex-sm-column">
+        <div class="col-sm-12 col-md-6 col-lg-2 mb-3 d-sm-flex flex-sm-column d-sm-flex flex-sm-column">
           <h5 class="mt-4 text-center">購物指南</h5>
           <ul class="list-unstyled ">
             <li class="mb-2 text-center">
@@ -373,7 +376,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-2 mb-3 d-sm-flex flex-sm-column justify-content-lg-end">
+        <div class="col-sm-12 col-md-6 col-lg-2 mb-3 d-sm-flex flexz-sm-column d-sm-flex flex-sm-column">
           <h5 class="mt-4 text-center">聯繫我們</h5>
           <ul class="list-unstyled ">
             <li class="mb-2 text-center">
@@ -390,6 +393,8 @@
             </li>
           </ul>
         </div>
+</div>
+
         <div
           class="row col-sm-12 col-md-6 col-lg-3 mb-3 d-sm-flex flex-sm-column align-items-center align-items-center">
           <button type="button" class="mx-auto btn btn-outline-info mt-4 mb-4" style="width: 200px; height: 50px;"> TW /
@@ -414,7 +419,7 @@
                 d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z" />
             </svg>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     </div>
@@ -422,6 +427,86 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
     </script>
+
+  <script>
+    let cards = [
+      {
+        img: './img/7.jpg',
+        smallTitle: '限量版公仔',
+        description: '這款「告訴婆婆」公仔以精緻細節呈現角色魅力，造型可愛又逗趣，無論收藏或擺飾都超療癒，是粉絲必收的限定周邊！',
+        price: '售價： $2,400',
+      },
+      {
+        img: './img/8.jpg',
+        smallTitle: '限量版公仔',
+        description: '「金蛋蛋」以亮面金屬質感打造，造型圓潤討喜、擺著就能招好運。小巧可愛、細節精緻，是桌上最療癒的幸運小公仔，收藏送禮都超適合！',
+        price: '售價： $1,980',
+      },
+      {
+        img: './img/9.jpg',
+        smallTitle: '限量版公仔',
+        description: '我們的「全部角色」系列公仔以高品質呈現，每款都精細還原角色特色與表情。造型可愛、質感優秀，一次收藏全套更完整、更有成就感，是粉絲不可錯過的必收系列！',
+        price: '售價： $3,600',
+      }
+    ]
+    const cardlist = document.querySelector('#card-list')
+
+    cards.forEach((item) => {
+      cardlist.innerHTML += `
+        <div class="bg-secondary-subtle d-flex px-0 m-3" style="width: 450px; height: 300px;">
+          <img style="width: 200px; height: 300px;" src="${item.img}" alt="">
+            <span class="p-4 d-flex flex-column justify-content-between">
+              <div class="text-danger">${item.smallTitle}</div>
+              <div>${item.description}</div>
+              <h3>${item.price}</h3>
+            </span>
+        </div>`
+    });
+    let footers = [
+      {
+        title: '品牌宇宙',
+        subTitle1: '品牌故事',
+        subTitle2: '工藝',
+        subTitle3: '永續承諾',
+        subTitle4: '',
+      },
+ {
+        title: '購物指南',
+        subTitle1: '新品上市',
+        subTitle2: '禮物推薦',
+        subTitle3: '限定優惠',
+        subTitle4: '商業合作',
+      },
+       {
+        title: '聯繫我們',
+        subTitle1: '客服中心',
+        subTitle2: '門市資訊',
+        subTitle3: 'Q&A',
+        subTitle4: '客戶回饋',
+      },
+    ]
+    const footerList = document.querySelector('#footer-list')
+    footers.forEach((item) => {
+      footerList.innerHTML += `
+       <div id="footer-list"class="col-sm-12 col-md-6 col-lg-2 mb-3 d-sm-flex flex-sm-column d-sm-flex flex-sm-column">
+          <h5 class="mt-4 text-center">${item.title}</h5>
+          <ul class="list-unstyled">
+            <li class="mb-2 text-center ">
+              <a class="link-offset-2 link-underline link-underline-opacity-0 link-hover-underline text-dark ms-2"
+                href="">${item.subTitle1}</a>
+            </li>
+            <li class="mb-2 text-center">
+              <a class="text-decoration-none text-dark text-center ms-2" href="">${item.subTitle2}</a>
+            </li>
+            <li class="mb-2 text-center">
+              <a class="text-decoration-none text-dark ms-2" href="">${item.subTitle3}</a>
+            </li>
+          </ul>
+          </div>
+`
+    });
+
+  </script>
 </body>
 
 </html>
