--- a/購物車1.html
+++ b/購物車1.html
@@ -64,7 +64,7 @@
   <!-- a 標籤裡面不會再包一個a標籤 -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container ">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./index.html">
         <img src="./img/logo.jpg" alt="Bootstrap" class="img-style">
       </a>
       <!-- =================================nav====================================== -->
@@ -75,7 +75,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" href="#">首頁</a>
+            <a class="nav-link active" href="./index.html">首頁</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="#">新品上市</a>
@@ -93,11 +93,11 @@
             </a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+            <a class="nav-link dropdown-toggle" href="./登入.html" role="button" data-bs-toggle="dropdown">
               <i class="bi bi-person"></i>
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">登入</a></li>
+              <li><a class="dropdown-item" href="./登入.html">登入</a></li>
             </ul>
           </li>
         </ul>
@@ -224,7 +224,7 @@
 
           <section class="main-button d-flex justify-content-between px-3 py-5">
             <a class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover mt-2"
-              href=""><i class="bi bi-arrow-left"></i>返回購物</a>
+              href="./index.html"><i class="bi bi-arrow-left"></i>返回購物</a>
             <a href="./購物車2.html"><button class="button border-info rounded-2 py-2 px-4 bg-info-subtle"
                 type="button">下一步</button>
             </a>
