--- a/登入.html
+++ b/登入.html
@@ -14,37 +14,46 @@
             margin: 0;
             background-color: rgba(0, 0, 0, 0.954);
         }
+
+        a {
+            text-decoration: none;
+            color: #64be7c
+        }
     </style>
 </head>
 
 <body>
     <main class="d-flex align-items-center justify-content-center">
-        <div class="border border-3 border-success-subtle mx-auto my-5 d-flex flex-row " style="width:75%;  height: 90vh; color: #64be7c;">
+        <div class="border border-3 border-success-subtle mx-auto my-5 d-flex flex-row "
+            style="width:75%;  height: 90vh; color: #64be7c;">
             <div class="d-none d-md-block" style="width: 100%;">
                 <img class="opacity-50 bg-info rounded-start-4" style="width: 100%;  height: 100%;"
                     src="./img/cover.jpg"></img>
             </div>
-            <div class="bg-black rounded-lg-4 rounded-end-md-4 d-flex flex-column align-items-center justify-content-center " style="width: 100%; ">
+            <div class="bg-black rounded-lg-4 rounded-end-md-4 d-flex flex-column align-items-center justify-content-center "
+                style="width: 100%; ">
                 <div class=" d-flex justify-content-center mb-5" style="width: 100%;">
                     <img src="./img/biglogo.jpg" style="width:80%; height:200px;" alt="">
                 </div>
                 <div class=" px-3 py-3" style="width: 95%;">
                     <div class="d-flex flex-wrap justify-content-evenly ">
-                       <a class="link-offset-2 link-underline link-underline-opacity-0" href=""> 
-                        <div class="bg-ingo border border-success rounded-circle d-flex  justify-content-center align-items-center"
-                            style="width: 50px; height: 50px;">
-                            <i class="fa-brands fa-facebook-f fa-2xl" style="color: #64be7c;"></i>
-                        </div>
+                        <a class="link-offset-2 link-underline link-underline-opacity-0" href="">
+                            <div class="bg-ingo border border-success rounded-circle d-flex  justify-content-center align-items-center"
+                                style="width: 50px; height: 50px;">
+                                <i class="fa-brands fa-facebook-f fa-2xl" style="color: #64be7c;"></i>
+                            </div>
                         </a>
-                       <a class="link-offset-2 link-underline link-underline-opacity-0" href=""> <div class="bg-ingo border border-success rounded-circle d-flex justify-content-center align-items-center"
-                            style="width: 50px; height: 50px;">
-                            <i class="fa-brands fa-linkedin-in fa-2xl" style="color: #64be7c;"></i>
-                        </div>
+                        <a class="link-offset-2 link-underline link-underline-opacity-0" href="">
+                            <div class="bg-ingo border border-success rounded-circle d-flex justify-content-center align-items-center"
+                                style="width: 50px; height: 50px;">
+                                <i class="fa-brands fa-linkedin-in fa-2xl" style="color: #64be7c;"></i>
+                            </div>
                         </a>
-                        <a class="link-offset-2 link-underline link-underline-opacity-0" href=""><div class="bg-ingo border border-success rounded-circle d-flex justify-content-center align-items-center"
-                            style="width: 50px; height: 50px;">
-                            <i class="fa-brands fa-google-plus-g fa-2xl" style="color: #64be7c;"></i>
-                        </div>
+                        <a class="link-offset-2 link-underline link-underline-opacity-0" href="">
+                            <div class="bg-ingo border border-success rounded-circle d-flex justify-content-center align-items-center"
+                                style="width: 50px; height: 50px;">
+                                <i class="fa-brands fa-google-plus-g fa-2xl" style="color: #64be7c;"></i>
+                            </div>
                         </a>
                     </div>
                     <form action="./登入.html" method="GET">
@@ -58,8 +67,8 @@
                                 <div class="text-white text-end pt-1 pe-5" style="font-size: 15px;">忘記密碼？</div>
                             </a>
                             <div class="d-flex flex-column justify-content-center align-items-center pt-4">
-                                <button class="btn btn-outline-success rounded-pill" style="width:90%;"
-                                    type="submit">登入</button>
+                                <a href="./index.html"><button class="btn btn-outline-success rounded-pill"
+                                        style="width:90%;" type="submit">登入</a></button>
                             </div>
                         </div>
                     </form>
