--- a/購物車2.html
+++ b/購物車2.html
@@ -63,7 +63,7 @@
   <!-- =====================================logo=================== -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class=" container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./index.html">
         <img src="./img/logo.jpg" alt="Bootstrap" class="img-style">
       </a>
       <!-- =================================nav================ -->
@@ -74,7 +74,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" href="#">首頁</a>
+            <a class="nav-link active" href="./index.html">首頁</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="#">新品上市</a>
@@ -87,14 +87,14 @@
           </li>
           <!-- ====================nav 購物車============= -->
           <li class="nav-item">
-            <a class="nav-link disabled"><i class="bi bi-bag-fill"></i></a>
+            <a class="nav-link disabled" href="./購物車1.html"><i class="bi bi-bag-fill"></i></a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+            <a class="nav-link dropdown-toggle" href="./登入.html" role="button" data-bs-toggle="dropdown">
               <i class="bi bi-person"></i>
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">登入</a></li>
+              <li><a class="dropdown-item" href="./登入.html">登入</a></li>
             </ul>
           </li>
         </ul>
