--- a/購物車4.html
+++ b/購物車4.html
@@ -63,7 +63,7 @@
   <!-- =====================================logo=================== -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class=" container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./index.html">
         <img src="./img/logo.jpg" alt="Bootstrap" class="img-style">
       </a>
       <!-- =================================nav================ -->
